tests/ui/fn/fn-bad-block-type.stderr
error[E0308]: mismatched types
  --> $DIR/fn-bad-block-type.rs:1:19
   |
LL | fn f() -> isize { true }
   |           -----   ^^^^ expected `isize`, found `bool`
   |           |
   |           expected `isize` because of return type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
