tests/ui/fn/fn-bad-block-type.rs
fn f() -> isize { true } //~ ERROR mismatched types

fn main() { }
